<resources>
    <string name="app_name">BLEScanning</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="button">Attend</string>
    <string name="button4">Login</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="nid">NID</string>
    <string name="button5">Connect</string>
    <string name="textview" />
    <string name="title_activity_attend">AttendActivity</string>
    <string name="startScanButton">Attend Lecture</string>
    <string name="title_activity_confirm_attend">ConfirmAttendActivity</string>
    <string name="register">Register</string>
    <string name="student_id">Student ID</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="attend">Attend</string>
    <string name="enter_class_code">Enter Class Code</string>
    <string name="attend_lecture">Attend Lecture</string>

</resources>
